--- a/ProyectoFinal/Properties/Resources.resx
+++ b/ProyectoFinal/Properties/Resources.resx
@@ -118,16 +118,28 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="Search_find_3519" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Search_find_3519.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="file_new_22051" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\file_new_22051.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="action_exit_close_remove_13915" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\action_exit_close_remove_13915.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="save_21411" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\save_21411.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="view_search_find_9565" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\view_search_find_9565.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="search_locate_find_icon-icons.com_67287 (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\search_locate_find_icon-icons.com_67287 (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="action_exit_close_remove_13915" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\action_exit_close_remove_13915.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="preview_search_find_locate_1551" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\preview_search_find_locate_1551.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="preview_search_find_locate_1551 (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\preview_search_find_locate_1551 (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
